2003-05-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/General.pm (contents): New function.
	* aclocal.in (greatest_mtime, force_output): New globals.
	(scan_configure, add_file): Update $greatest_mtime.
	(parse_arguments): Parse --force.
	(write_aclocal): Do not overwrite $output_file unless needed.
	* automake.texi (aclocal options): Document --force.
	* tests/aclocal7.test: New file.
	* tests/Makefile.am (TESTS): Add aclocal7.test.

2003-05-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Optional): Document m4_include.
	(Invoking aclocal): Shake a bit to introduce the various uses
	of aclocal and explain that aclocal will use m4_include for
	local files.
	(Extending aclocal): Show how to install installable macros
	in $(datadir)/aclocal, and make it clearer that writing installable
	macros is not the only way to extend aclocal.
	(Local Macros, Future of aclocal): New sections.

2003-04-27  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (@common_files): Remove acinclude.m4 since
	it will be m4_included by aclocal.m4 and files are always
	distributed.
	(scan_aclocal_m4): Do not bother about acinclude.m4 anymore.
	We will get this dependency when tracing m4_includes.
	* tests/aclocal6.test: Make sure acinclude.m4 is distributed
	when used.
	* tests/acinclude.test: Delete.
	* tests/Makefile.am (TESTS): Remove acinclude.test.

2003-04-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_configure): Don't add @configure_deps to
	DIST_COMMON, we do this from lib/am/configure.am now.
	Define the am__configure_deps variable instead of substituing
	%CONFIGURE_DEPS%.
	* lib/am/configure.am (%MAKEFILE-IN%, $(top_srcdir)/configure,
	$(ACLOCAL_M4)): Use $(am__configure_deps) instead of %CONFIGURE_DEPS%.
	(DIST_COMMON): Add $(am__configure_deps).

	* tests/aclocal6.test: New file.
	* lib/am/configure.am (am--refresh): New rule.
	(%MAKEFILE-IN%, %MAKEFILE%, $(top_builddir)/config.status,