@@ -42,9 +42,10 @@ endif %?TOPDIR_P%
 	  case '$(top_srcdir)/%CONFIGURE-AC% $(ACLOCAL_M4) $(am__configure_deps)' in \
 	    *$$dep*) \
 ?TOPDIR_P?	      echo ' cd $(srcdir) && $(AUTOMAKE) --%STRICTNESS% %USE-DEPS%'; \
-?TOPDIR_P?	      cd $(srcdir) && $(AUTOMAKE) --%STRICTNESS% %USE-DEPS%; \
-?!TOPDIR_P?	      cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh; \
-	      exit 0;; \
+?TOPDIR_P?	      cd $(srcdir) && $(AUTOMAKE) --%STRICTNESS% %USE-DEPS% \
+?!TOPDIR_P?	      cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh \
+		&& exit 0; \
+	      exit 1;; \
 	  esac; \
 	done; \
 ## Otherwise, rebuild only this file.
