@@ -1,3 +1,11 @@
+2003-05-07  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/am/configure.am (%MAKEFILE-IN%): Propagate automake's exit
+	status.
+	* tests/makej.test: New file (test Autom4te's cache locking,
+	new in CVS Autoconf).
+	* tests/Makefile.am (TESTS): Add makej.test.
+
 2003-05-06  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* lib/Automake/General.pm (contents): New function.
